# x2r-3d

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: nglod.yaml  nglod_lod3.yaml
tools/: batch_train.py  generate_octree.py  generate_octree_dual.py  generate_octree_fix.py  generate_points.py  generate_points_bak.py  generate_sdf.py  generate_sdf_bak.py  make_mesh_watertight.py
x2r_3d/: cli.py
x2r_3d/accelstructs/: __init__.py  base_as.py  octree_as.py  octree_as_bak.py
x2r_3d/data/datamodules/: __init__.py  sdf.py
x2r_3d/data/datasets/: octree_sdf_dataset.py  sdf.py  shapenet_v2.py
x2r_3d/models/grids/: __init__.py  blas_grid.py  octree_grid.py
x2r_3d/models/positional_embeddings/: __init__.py  identity_pe.py  positional_embedding.py
x2r_3d/models/sdf/: __init__.py  decoder.py  neural_sdf.py
x2r_3d/ops/mesh/: __init__.py  area_weighted_distribution.py  load_mesh.py  normalize.py  per_face_normals.py  random_faces.py  sample_near_surface.py  sample_near_surfaces.py  sample_on_surface.py  sample_surfaces.py
x2r_3d/ops/spc/: __init__.py  constructors.py  conversions.py  sampling.py
x2r_3d/utils/: logger.py
