[tool.poetry]
name = "x2r-3d"
version = "0.1.0"
homepage = "https://github.com/vivym/x2r-3d"
description = "x2r 3d"
authors = ["Ming Yang <vivym@live.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
packages = [{ include = "x2r_3d" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
x2r-3d = "x2r_3d.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
